# ERAV4-assignment-13

./: .gitignore  README.md  README_SPACE.md  README_TRAINING.md  app.py  app_smol.py  main.py  model.py  pyproject.toml  requirements.txt  test_model_implementation.py  train.py
logs/tensorboard/version_0/: events.out.tfevents.1765268407.MAC-QNYQPC2R2T.88043.0
logs/tensorboard/version_1/: events.out.tfevents.1765274926.MAC-QNYQPC2R2T.7268.0
logs/tensorboard/version_2/: events.out.tfevents.1765275552.MAC-QNYQPC2R2T.7768.0  hparams.yaml
logs/tensorboard/version_3/: events.out.tfevents.1765278317.MAC-QNYQPC2R2T.13054.0  hparams.yaml
